🔧 Setup initial GitHub Actions CI pipeline for Python project

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -29,5 +29,4 @@ jobs:
         if [ -f tests/test_main.py ]; then
           pytest tests/test_main.py
         else
-          echo "No tests found. Skipping tests."
-        fi
+          echo "⚠️ No tests found. Skipping tests."
